--- a/timerApp.html
+++ b/timerApp.html
@@ -5,33 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>タイマー/ストップウォッチ</title>
     <link rel="stylesheet" href="timerApp.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 <body>
 
-    <main>
-        <h1></h1>
-
+    <main >
         <section class="timer">
-            <button class="change">ストップウォッチへ切り替え</button>
+            <button class="switchBtn btn btn-outline-secondary ">ストップウォッチへ切り替え</button>
             <div class="display">
-                <div class="timeT">時間表示</div>
-                <button class="startT">スタート</button>
+                <div class="timeT">000:00:00</div>
+                <button class="startT btn btn-outline-primary">スタート</button>
+                <button class="stopT btn btn-outline-danger">ストップ</button>
             </div>
-            <button class="oneSecond">1秒</button>
-            <button class="tenSecond">10秒</button>
-            <button class="oneMinute">1分</button>
-            <button class="tenSecond">10分</button>
-            <button class="oneHour">1時間</button>
-            <button class="tenHour">10時間</button>
-            <button class="resetW">リセット</button>
+            <button class="oneSecond btn btn-outline-secondary">1秒</button>
+            <button class="tenSecond btn btn-outline-secondary">10秒</button>
+            <button class="oneMinute btn btn-outline-secondary">1分</button>
+            <button class="tenMinute btn btn-outline-secondary">10分</button>
+            <button class="oneHour btn btn-outline-secondary">1時間</button>
+            <button class="tenHour btn btn-outline-secondary">10時間</button>
+            <button class="resetT btn btn-outline-secondary">リセット</button>
         </section>
 
         <section class="stopwatch">
-            <button class="change">ストップウォッチへ切り替え</button>
+            <button class="switchBtn btn btn-outline-secondary">タイマーへ切り替え</button>
             <div class="timeW">時間表示</div>
-            <button class="resetW">リセット</button>
-            <button class="startW">スタート</button>
+            <button class="resetW btn btn-outline-secondary">リセット</button>
+            <button class="startW btn btn-outline-primary">スタート</button>
+            <button class="stopW btn btn-outline-danger">ストップ</button>
         </section>
     </main>
 
